swap to ProcessBuilder